--- a/index.html
+++ b/index.html
@@ -184,40 +184,73 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6" id="portfolioGrid">
                 <!-- Portfolio Item 1 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300" data-category="furniture">
-                    <img src="https://public.readdy.ai/ai/img_res/8f7be80abf7c990fb9c8823c7ad6e37c.jpg" alt="Custom Dining Table" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/Furniture1.jpg" class="w-full h-[300px] object-cover object-top">
                 </div>
                 <!-- Portfolio Item 2 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300" data-category="kitchen">
-                    <img src="https://public.readdy.ai/ai/img_res/4fcfa00f3401b3c2c3a6be5c6c9024d4.jpg" alt="Modern Kitchen Installation" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/kitchen1.jpg" class="w-full h-[300px] object-cover object-top">
                 </div>
                 <!-- Portfolio Item 3 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300" data-category="restoration">
-                    <img src="https://public.readdy.ai/ai/img_res/550dca22dd4c28e55e2e47477a7a8a1c.jpg" alt="Antique Cabinet Restoration" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/restoration1.jpeg" class="w-full h-[300px] object-cover object-top">
                 </div>
                 <!-- Portfolio Item 4 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300" data-category="furniture">
-                    <img src="https://public.readdy.ai/ai/img_res/d5834674c4fd66221f0f44e2954da2b5.jpg" alt="Custom Staircase" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/Furniture2.jpg" class="w-full h-[300px] object-center object-top">
                 </div>
                 <!-- Portfolio Item 5 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300" data-category="kitchen">
-                    <img src="https://public.readdy.ai/ai/img_res/f9dcaaf71b2e81355c31e2f45036fd61.jpg" alt="Office Reception Desk" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/kitchen2.jpg" class="w-full h-[300px] object-center object-top">
                 </div>
                 <!-- Portfolio Item 6 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300" data-category="restoration">
-                    <img src="https://public.readdy.ai/ai/img_res/b163db07f329ba3aeca6298e234b1fff.jpg" alt="Built-in Bookshelves" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/restoration10.jpg" class="w-full h-[300px] object-center object-top">
                 </div>
                 <!-- Additional Portfolio Items (Initially Hidden) -->
                 <!-- Portfolio Item 7 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="furniture">
-                    <img src="https://public.readdy.ai/ai/img_res/8f7be80abf7c990fb9c8823c7ad6e37c.jpg" alt="Custom Bookshelf" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/Furniture3.jpg" class="w-full h-[300px] object-center object-top">
                 </div>
                 <!-- Portfolio Item 8 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="kitchen">
-                    <img src="https://public.readdy.ai/ai/img_res/4fcfa00f3401b3c2c3a6be5c6c9024d4.jpg" alt="Kitchen Island" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/kitchen3.jpg" class="w-full h-[300px] object-center object-top">
                 </div>
                 <!-- Portfolio Item 9 -->
                 <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="restoration">
-                    <img src="https://public.readdy.ai/ai/img_res/550dca22dd4c28e55e2e47477a7a8a1c.jpg" alt="Antique Table" class="w-full h-[300px] object-cover object-top">
+                    <img src="images/restoration2.jpeg" class="w-full h-[300px] object-center object-top">
+                </div>
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="furniture">
+                    <img src="images/Furniture4.jpg" class="w-full h-[300px] object-center object-top">
+                </div>
+                <!-- Portfolio Item 8 -->
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="restoration">
+                    <img src="images/restoration3.jpg" class="w-full h-[300px] object-center object-top">
+                </div>
+                <!-- Portfolio Item 9 -->
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="restoration">
+                    <img src="images/restoration4.jpg" class="w-full h-[300px] object-center object-top">
+                </div>
+                
+
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="restoration">
+                    <img src="images/restoration5.jpg" class="w-full h-[300px] object-center object-top">
+                </div>
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="furniture">
+                    <img src="images/Furniture5.jpeg" class="w-full h-[300px] object-center object-top">
+                </div>
+                <!-- Portfolio Item 8 -->
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="restoration">
+                    <img src="images/restoration6.jpeg" class="w-full h-[300px] object-center object-top">
+                </div>
+                <!-- Portfolio Item 9 -->
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="restoration">
+                    <img src="images/restoration7.jpg" class="w-full h-[300px] object-center object-top">
+                </div>
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="restoration">
+                    <img src="images/restoration8.jpg" class="w-full h-[300px] object-center object-top">
+                </div>
+                <div class="portfolio-item gallery-item relative overflow-hidden rounded-lg shadow-md transition-all duration-300 hidden" data-category="restoration">
+                    <img src="images/restoration9.jpg" class="w-full h-[300px] object-center object-top">
                 </div>
             </div>
             <div class="text-center mt-12">
